k8s/k8s-pratice/genid-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: genid-stone
spec:
  containers:
    - image: smlinux/genid:env
      name: fakeid
      volumeMounts:
        - mountPath: /webdata
          name: html
    - image: nginx:1.14
      name: wbe-server
      volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
          readOnly: true
        - name: config
          mountPath: /etc/nginx/conf.d
          readOnly: true

  volumes:
    - name: html
      emptyDir: {}
    - name: config
      configMap:
        name: ttabae-config
        items:
          - key: nginx-config.conf
            path: nginx-config.conf
