k8s/k8s-pratice/nodeselector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-node-selector
spec:
  nodeSelector:
    gpu: "true"
    disk: "ssd"
  containers:
    - name: nginx
      image: nginx:1.14
      ports:
        - containerPort: 80
