k8s/k8s-pratice/pod-nginx-test-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mydb-node01
  namespace: product
spec:
  containers:
    - name: mydb
      image: redis
      ports:
        - containerPort: 80
          protocol: TCP
      resources:
        requests:
          cpu: "200m"
          memory: "500Mi"
        limits:
          cpu: 1
          memory: "1Gi"
      livenessProbe:
        httpGet:
          path: /
          port: 80
        failureThreshold: 3
        successThreshold: 1
