k8s/k8s-pratice/external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-name-service
spec:
  type: ExternalName
  externalName: www.google.com
