k8s/k8s-pratice/loadbalancer-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
spec:
  type: LoadBalancer
  selector:
      app: webui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
