k8s/k8s-pratice/mainui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainui-svc
spec:
  selector:
    app: mainui
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
